fix: side-nav-bar의 gap 스타일 수정 및 불필요한 속성 제거

--- a/www/src/nav/SideNavBar.scss
+++ b/www/src/nav/SideNavBar.scss
@@ -50,9 +50,7 @@ side-nav-bar {
     div {
       line-height: 2rem;
       &.gap {
-        background-color: var(--color-border);
-        height: 1px;
-        margin: 0.5rem -0.5rem;
+        margin: 0.5rem;
       }
       a {
         white-space: nowrap;
